raw-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-api
  namespace: nodejs-express-backend-devqa
spec:
  replicas: 2
  selector:
    matchLabels:
      app: express-api
      role: express-api
  template:
    metadata:
      labels:
        app: express-api
        role: express-api
    spec:
      containers:
      - name: express-api
        image: lukondefmwila/express-test:1.0.2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
